--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+     <dependency>
+         <groupId>org.apache.poi</groupId>
+         <artifactId>poi-ooxml</artifactId>
+         <version>3.15</version>
+     </dependency>
+        
+     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+     <dependency>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-text</artifactId>
+         <version>1.1</version>
+     </dependency>
   </dependencies>
 </project>
